--- a/src/views/index.html
+++ b/src/views/index.html
@@ -270,10 +270,7 @@
                                 </div>
                             </header>
                             <div class="dropdown-items hide-dropdown">
-                                <span>That's great</span>
-                                <span>That's amazing</span>
-                                <span>That's good</span>
-                                <span>That's free</span>
+                                <span>Zabbix is ​​a corporate monitoring solution that focuses on monitoring data from a wide range of equipment and hardware to help companies obtain or obtain maximum information about a particular service generated at the end of the business</span>
                             </div>
                         </div>
                         <div class="row">
@@ -285,10 +282,9 @@
                                 </div>
                             </header>
                             <div class="dropdown-items hide-dropdown">
-                                <span>That's great</span>
-                                <span>That's amazing</span>
-                                <span>That's good</span>
-                                <span>That's free</span>
+                                <span>
+                                    It depends on the plan, you can choose yours by <strong><a id="faqLnk" href="#prices">clicking here</a></strong>
+                                </span>
                             </div>
                         </div>
                         <div class="row">
@@ -300,10 +296,7 @@
                                 </div>
                             </header>
                             <div class="dropdown-items hide-dropdown">
-                                <span>That's great</span>
-                                <span>That's amazing</span>
-                                <span>That's good</span>
-                                <span>That's free</span>
+                                <span>You can pay any payment method accepted by PayPal</span>
                             </div>
                         </div>
                     </div>
